package com.example;

public interface Ordenacion {
    //Interfaz que define las funciones que van a tener las subclases de burbuja y selección
    public void ordenar(); 
    public void imprimir(); 
}
